--- a/assets/ansatzrechner/index.html
+++ b/assets/ansatzrechner/index.html
@@ -12,7 +12,7 @@
     --card-radius:10px;
     --shadow:0 1px 2px rgba(0,0,0,.04);
   }
-  body { font-family: system-ui, Segoe UI, Arial, sans-serif; margin: 16px 24px; background:#f7f7f8; color:#111; }
+  body { font-family: system-ui, Segoe UI, Arial, sans-serif; margin: 0; background:#f7f7f8; color:#111; }
   h1 { font-size: 1.25rem; margin: 0 0 10px; }
   h2 { font-size: 1.05rem; margin: 0 0 8px; }
   p.help { color:#555; margin: 6px 0 10px; }
@@ -36,7 +36,7 @@ button:disabled{opacity:.45;cursor:not-allowed}
   .section .toolbar{ display:flex; flex-wrap:wrap; gap:8px; align-items:center; margin:6px 0 8px; }
 
   /* --- Tabellen --- */
-  table { border-collapse: collapse; width: 100%; max-width: 1400px; background:#fff; }
+  table { border-collapse: collapse; width: 100%; max-width: none; background:#fff; }
   th, td { border: 1px solid #ccc; padding: 4px 6px; font-size: 0.9rem; text-align: left; background:#fff; }
   th { background: #f3f3f3; }
   tbody tr:hover { background: #fafafa; }
