--- a/assets/ansatzrechner/index.html
+++ b/assets/ansatzrechner/index.html
@@ -4122,8 +4122,8 @@ h2ChemEq: "3. Reaktionsgleichung",
 },
   en: {
 
-    docTitle: "Eckhardt Lab Ansatzrechner",
-    mainTitle: "Eckhardt Lab Ansatzrechner",
+    docTitle: "Eckhardt Lab Reaction Planner (Ansatzrechner)",
+    mainTitle: "Eckhardt Lab Reaction Planner (Ansatzrechner)",
     langLabel: "Language:",
     disclaimerTitle: "Disclaimer",
     disclaimerText: `This tool is provided as a non-binding calculation and documentation aid. While we aim for accuracy, we do not warrant that the information and results are complete, correct, or up to date. Always perform safety and regulatory assessments based on original sources (e.g., SDS, manufacturer information, GESTIS) and applicable local regulations. <a href="/imprint/" target="_blank" rel="noopener">Imprint & privacy notice</a>.`,
@@ -4171,7 +4171,7 @@ helpIntro: `Ansatzrechner: PubChem search, Ansatzrechner, ChemEq reaction equati
     thSelDel: "×",
 searchStatusReady: "Ready.",
     resultsHeads: ["Name","SMILES","CAS","Molecular formula","Molar mass","Density"],
-h2Ansatz: "2. Ansatzrechner",
+h2Ansatz: "2. Reaction Planner (Ansatzrechner)",
     helpAnsatz: `Set the target scale and edit fields by double-click. <em>Eq</em> is always editable.
     m and V are calculated when leaving the fields for molar mass/density or (for solutions) via concentration c. R is the purity in % of the substance.
     Drag & drop to reorder rows. Clicking × at the end of a row deletes the whole row.`,
